// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build build-with-ts 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "{
  \\"devDependencies\\": {
    \\"@namics/ts-config\\": \\"1.0.1\\",
    \\"typescript\\": \\"3.9.2\\"
  },
  \\"browserslist\\": [
    \\"> 1%\\",
    \\"last 2 versions\\",
    \\"not ie <= 10\\"
  ],
  \\"scripts\\": {
    \\"build\\": \\"tsc --outDir build\\",
    \\"watch\\": \\"tsc --watch --outDir build\\"
  }
}",
    }
  }
/>
`;

exports[`build build-with-ts 2`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "{
	\\"extends\\": \\"@namics/ts-config\\",
	\\"exclude\\": [\\"dist\\", \\"build\\", \\"node_modules\\", \\"__tests__\\"]
}
",
    }
  }
/>
`;

exports[`build build-with-ts 3`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "package.json,tsconfig.json",
    }
  }
/>
`;

exports[`build default 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "module.exports = {
	plugins: [
		[
			require.resolve('@babel/plugin-proposal-decorators'),
			{
				\\"legacy\\": true
			},
		],
		[
			require.resolve('@babel/plugin-syntax-dynamic-import'),
		],
	],
	presets: [
		[
			require.resolve('@babel/preset-react'),
		],
		[
			require.resolve('@babel/preset-env'),
			{
				useBuiltIns: 'entry'
			},
		],
	],
};
",
    }
  }
/>
`;

exports[`build default 2`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "{
  \\"browserslist\\": [
    \\"> 1%\\",
    \\"last 2 versions\\",
    \\"not ie <= 10\\"
  ],
  \\"devDependencies\\": {
    \\"@babel/cli\\": \\"7.8.4\\",
    \\"@babel/core\\": \\"7.9.6\\",
    \\"@babel/plugin-proposal-decorators\\": \\"7.8.3\\",
    \\"@babel/plugin-syntax-dynamic-import\\": \\"7.8.3\\",
    \\"@babel/preset-env\\": \\"7.9.6\\",
    \\"@babel/preset-react\\": \\"7.9.4\\"
  },
  \\"scripts\\": {
    \\"build\\": \\"babel src --out-dir build\\",
    \\"watch\\": \\"babel src --watch --out-dir build\\"
  }
}",
    }
  }
/>
`;

exports[`build default 3`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "babel.config.js,package.json",
    }
  }
/>
`;
